# RustWebApp

./: README.md  Rust Web App.postman_collection.json
.github/workflows/: rust.yml
src/: Cargo.toml
src/ingress/: Cargo.toml
src/ingress/src/: main.rs
src/ingress/web/: esbuild.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/ingress/web/src/: App.vue
src/ingress/web/src/api/: get.ts  url.ts  utils.ts
src/ingress/web/src/components/: WorkItemTable.vue
src/ingress/web/src/interfaces/: workItem.ts  workItemStatus.ts  workItems.ts
src/planner/core/: Cargo.toml
src/planner/core/src/: enums.rs  main.rs  structs.rs
src/planner/core/src/api/actions/: create.rs  delete.rs  get.rs  update.rs
src/planner/core/src/structs/: base.rs  completed.rs  in_progress.rs  mod.rs  ready.rs
src/planner/dal/: Cargo.toml
src/planner/dal/src/: json_repository.rs  lib.rs
src/planner/server/: .env  Cargo.toml
src/planner/server/src/: main.rs  router.rs
src/planner/server/src/api/: mod.rs
src/planner/server/src/api/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/shared/: Cargo.toml
src/shared/src/: auth.rs  errors.rs  lib.rs
