[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dal = { path = "../dal", features = ["json-store"] }
serde = { version = "1.0.219", features = ["derive"] }
shared = { path = "../../shared", features = ["actix"] }
tokio = { version = "1.45.1", features = ["full"] }